# CPSTL

./: CMakeLists.txt  README.md  library.properties
examples/1_BuildConfiguration/Desktop/: CMakeLists.txt  main.cpp
examples/AUnit_Tests/: AUnit_Tests.ino
examples/AUnit_Tests/src/: AssignmentTests.cpp  cpstd_string.cpp  cpstd_type_traits.cpp  cpstd_vector.cpp  string.cpp  string_CapacityTests.cpp
examples/AUnit_Tests/src/vector/: AssignmentTests.cpp  ConstructorTests.cpp  DynamicAllocationTests.cpp  ElementAccessTests.cpp  ModifiersTests.cpp  NonMemberFunctions.cpp
examples/vector/: CMakeLists.txt
examples/vector/1_BasicUsage/Desktop/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CPSTL.h  CPSTL_BuildSettings.h  CPSTL_UserSetup.h  CPalgorithm  CPalgorithm.h  CPcstring.h  CPcwchar.h  CPexception  CPexception.h  CPfunctional.h  CPinitializer_list  CPinitializer_list.h  CPios  CPios.h  CPiostream.h  CPistream.h  CPiterator.h  CPlimits.h  CPlocale.h  CPmemory.h  CPostream.h  CPstreambuf.h  CPstring  CPstring.h  CPtype_traits  CPtype_traits.h  CPutility  CPutility.h  CPvector  CPvector.h
src/streams/: CMakeLists.txt  CPSTL_basic_ios.h  CPSTL_basic_ios.tpp  CPSTL_basic_iostream.h  CPSTL_basic_iostream.tpp  CPSTL_basic_istream.h  CPSTL_basic_istream.tpp  CPSTL_basic_ostream.h  CPSTL_basic_ostream.tpp  CPSTL_basic_streambuf.h  CPSTL_basic_streambuf.tpp  CPSTL_fpos.h  CPSTL_ios.h  CPSTL_ios_base.cpp  CPSTL_ios_base.h  CPSTL_iostream.cpp  CPSTL_istream.cpp  CPSTL_ostream.cpp
src/string/: CMakeLists.txt  CPSTL_String.cpp  CPSTL_String.h  CPSTL_String.tpp  CPSTL_char_traits.h  CPSTL_cstring.cpp
src/string/Utilities/: CMakeLists.txt  CPSTL_String_Utilities.h  CPSTL_String_toString.cpp  CPSTL_String_toString.h
src/utility/: CMakeLists.txt  CPSTL_Iterator.h  CPSTL_Move.h  CPSTL_allocator.h  CPSTL_types.h
src/utility/iterator/: CMakeLists.txt  CPSTL_prefefined_iterators.h
src/utility/iterator/predefined_iterators/: CMakeLists.txt  CPSTL_reverse_iterator.h
src/utility/type_traits/: CMakeLists.txt  CPSTL_TypeTraits.h  CPSTL_TypeTraits_CompositeTypeCategories.h  CPSTL_TypeTraits_HelperClasses.h  CPSTL_TypeTraits_PrimaryTypeCategories.h  CPSTL_TypeTraits_TypeProperties.h
src/vector/: CMakeLists.txt  CPSTL_Vector.h  CPSTL_Vector.tpp  CPSTL_Vector_bool.h
tests/: CMakeLists.txt  CPSTL_ios.cc  CPSTL_string.cc  CPSTL_type_traits.cc  CPSTL_vector.cc
tests/string/: BasicFunctionality.cc  CMakeLists.txt  CapacityTests.cc  ConstructorTests.cc  ElementAccessTests.cc  ModifiersTests.cc  NonMemberFunctionsTests.cc  StringOperationsTests.cc
tests/vector/: AssignmentTests.cc  CMakeLists.txt  CapacityTests.cc  ConstructorTests.cc  DynamicAllocationTests.cc  ElementAccessTests.cc  ModifiersTests.cc  NonMemberFunctionsTests.cc
