add_executable( CPSTL_type_traits_tests CPSTL_type_traits.cc ) 
target_link_libraries( CPSTL_type_traits_tests PUBLIC CPSTL PUBLIC GTest::gtest_main )
gtest_discover_tests(CPSTL_type_traits_tests)

if( ${CPSTL_TESTING}  AND ${CPSTL_VECTOR_TESTING})
    add_executable( CPSTL_vector_tests CPSTL_vector.cc ) 
    target_link_libraries( CPSTL_vector_tests PUBLIC CPSTL PUBLIC GTest::gtest_main )
    gtest_discover_tests(CPSTL_vector_tests)
endif() 

if( ${CPSTL_TESTING}  AND ${CPSTL_STRING_TESTING})
    add_executable( CPSTL_string_tests CPSTL_string.cc ) 
    target_link_libraries( CPSTL_string_tests PUBLIC CPSTL PUBLIC GTest::gtest_main )
    gtest_discover_tests(CPSTL_string_tests)
endif() 
